packages/website/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hypertool-web
spec:
  type: NodePort
  selector:
    app: hypertool-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
